# footprints

./: .gitignore  CMakeLists.txt  README.md
cmake/template/: FOOTPRINTSConfig.cmake.in
doc/: groups.dox  main.dox
libraries/: CMakeLists.txt
libraries/ExampleLibrary/: CMakeLists.txt
libraries/TeoYarp/: CMakeLists.txt
libraries/TeoYarp/KdlSolver/: CMakeLists.txt
programs/: CMakeLists.txt
programs/LeftFootprint/: CMakeLists.txt  InCvPort.cpp  InCvPort.hpp  LeftFootprint.cpp  LeftFootprint.hpp  main.cpp
programs/RightFootprint/: CMakeLists.txt  InCvPort.cpp  InCvPort.hpp  RightFootprint.cpp  RightFootprint.hpp  main.cpp
programs/exampleProgram/: CMakeLists.txt  main.cpp
programs/plotStep/: footCenters.py
scripts/admin/: update-dox.sh
scripts/gnome/: footprints.desktop  footsteps.desktop
share/: CMakeLists.txt
share/teoStep/scripts/: teoStep.xml
